assets/css/style.css
html {
  overflow-x: hidden;
}

body {
  font-family: Quattrocento, sans-serif;
  color:#424B54;
  background-color: #D5ACA9;

}


#veg-portion {
  width: 300px;
  height: 600px; 
  border-radius: 300px 0 0 300px;
  background-image: url('../images/vegetables.jpg');
  position: absolute;
  top: 0;
  left:300px;
}

  #protein-portion {
      width: 300px;
      height: 300px;
      border-radius: 0 300px 0 0;
      background-image: url('../images/protein.jpg');
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      position: absolute;
      top: 0;
      left:600px;
  }
  
    #carb-portion {
      width: 300px;
      height: 300px;
      border-radius: 0 0 300px 0px;
      background-image: url('../images/carbs.jpg');
      position: absolute;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      top: 300px;
      left: 600px;
    }
    
    #plate-area {
      position:relative;
      top:-70px;
      left:350px;
      background-color: red;
    }

  #menu {
      font-size: 150%;
      letter-spacing: 4px;
      position: absolute;
      top: 23px;
      right:0;
      
  }
  
  #menu li {
      float: right;
      list-style-type: none;
      margin-right: 80px;
    
  }
  
  #menu a {
      text-decoration: none;
      color: inherit;
  }
  
  #menu a:hover {
      border-bottom: 1px solid #3a3a3a;
  }

  .active {
    border-bottom: 1px solid #3a3a3a;
}

#heading {
  font-size: 250%;
  letter-spacing: 4px;
  position: absolute;
  top: 10px;
  left:40px;
}

.inspire-button {
    padding-top: 5px;
    margin-bottom: 30px;
    background-color: bisque;
    border: 1px solid;
    width: 100px;
    height: 50px;
    font-size: 15px;
}

.inspire-button:hover {
  background-color: #EBCFB2;
  color:#424B54;
}

#veg-result, #carb-result, #protein-result {
  font-size: 25px;
}

#button-and-results {
  padding-top: 50px;
  padding-left: 30px;
}

.form-section {
  padding-top: 110px;
  padding-left:30px;
  margin-top: 30px;
  font-size: 20px;
}

#quiz-area {
  padding-left:30px;
  padding-top: 130px;
}

/* Footer */

#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 2.5rem;   
}

#footer {
  position: absolute;
  display: inline;
  bottom: 0;
  width: 100%;
  height: 2.5rem;            
}

.social-networks {
  text-align: center;
}

.social-networks > li {
  display: inline;
}

.social-networks i {
  font-size: 160%;
  margin: 1%;
  padding: 5%;
  color: #424B54;
}

/* Result and message on Quiz page
#result-and-message {
  font-size: 20px;
  color: #3a3a3a;
  background-color: #EBCFB2;
  position: absolute;
  right:600px;
  bottom:60px;
  text-align:center;
  border: 1px solid;
  width:400px;
  height:100px;
  
}
*/

/* Mobile media query */

@media screen and (max-width: 800px) {
  #menu {
      /*float: left;*/
      margin-bottom: 20px;
      /*line-height: 120px;*/
      font-size: 30px;
      padding: 20px;
      /*margin: 0;*/
      margin-top:50px;
      font-weight: bold;
  }

#heading {
font-size: 30px;
}

#menu li {
    list-style-type: none;
    margin-right: 40px;
    padding:0;
    font-size:30px;
}

.form-section {
  font-size:15px;
}

#quiz-area {
  padding-left:30px;
  padding-top: 150px;
}


#veg-portion {
  width: 150px;
  height: 300px; 
  border-radius: 150px 0 0 150px;
  background-image: url('../images/vegetables.jpg');
  position: absolute;
  top: 450px;
  left:-270px;
}

  #protein-portion {
      width: 150px;
      height: 150px;
      border-radius: 0 150px 0 0;
      background-image: url('../images/protein.jpg');
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      position: absolute;
      top: 450px;
      left:-120px;
  }
  
    #carb-portion {
      width: 150px;
      height: 150px;
      border-radius: 0 0 150px 0px;
      background-image: url('../images/carbs.jpg');
      position: absolute;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      top: 600px;
      left: -120px;
    }
    
    #plate-area {
      position:relative;
      top:-70px;
      left:350px;
      background-color: red;
    }

/* mobile media query footer */

    #page-container {
      position: relative;
      min-height: 140vh;
    }
    
    #content-wrap {
      padding-bottom: 2.5rem;   
    }
    
    #footer {
      position: absolute;
      display: inline;
      bottom: 0;
      width: 100%;
      height: 2.5rem;            
    }

    .social-networks {
      text-align: center;
    }
    
    .social-networks > li {
      display: inline;
    }
    
    .social-networks i {
      font-size: 160%;
      margin: 1%;
      padding: 8%;
      padding-right: 70px;
      color: #424B54;
    }
}

